[project]
name = "airline-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "M Shafqat sarwar", email = "khansarwar1@hotmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.8.3",
    "openai-agents>=0.4.2",
]

[project.scripts]
agent = "airline_agent.main:run_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
